force-app/main/default/objects/Solution/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <description>Name of Candidate</description>
    <label>Candidate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>