force-app/main/default/objects/Solution/fields/Candidate_status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_status__c</fullName>
    <label>Candidate status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>On contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>