force-app/main/default/objects/Solution/fields/Date_accepted_rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_accepted_rejected__c</fullName>
    <label>Date accepted / rejected</label>
    <type>Date</type>
</CustomField>