force-app/main/default/objects/Solution/fields/Decision_status__c.field-meta.xml
<CustomField>
    <fullName>Decision_status__c</fullName>
    <label>Decision status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>