force-app/main/default/objects/Solution/fields/Opportunity_status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_status__c</fullName>
    <label>Opportunity status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>