force-app/main/default/objects/Solution/fields/Order_of_Importance__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Importance__c</fullName>
    <label>Order of Priority</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>