force-app/main/default/objects/Solution/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Order of Importance</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>