force-app/main/default/objects/Solution/fields/Requirement_status__c.field-meta.xml
<CustomField>
    <fullName>Requirement_status__c</fullName>
    <label>Requirement status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>