force-app/main/default/objects/Solution/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL to take to Candidates Contact record</description>
    <label>URL</label>
    <type>TextArea</type>
</CustomField>