force-app/main/default/objects/Solution/listViews/AllCandidates.listView-meta.xml
<ListView>
    <fullName>AllCandidates</fullName>
    <columns>SOLUTION.ISSUE</columns>
    <columns>SOLUTION.SOLUTION_NUMBER</columns>
    <columns>SOLUTION.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SOLUTION.TIMES_USED</columns>
    <columns>SOLUTION.LAST_UPDATE</columns>
    <columns>SOLUTION.CREATED_DATE</columns>
    <columns>SOLUTION.STATUS_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SOLUTION.LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2007 12:00 AM</value>
    </filters>
    <label>All Candidates</label>
</ListView>