force-app/main/default/objects/Solution/listViews/Candidateswithrequirements.listView-meta.xml
<ListView>
    <fullName>Candidateswithrequirements</fullName>
    <columns>SOLUTION.ISSUE</columns>
    <columns>SOLUTION.SOLUTION_NUMBER</columns>
    <columns>SOLUTION.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SOLUTION.TIMES_USED</columns>
    <columns>SOLUTION.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SOLUTION.TIMES_USED</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Candidates with requirements</label>
</ListView>